--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Goutham Shetty | UI/UX Designer</title>
     <meta name="description" content="Links to Goutham Shetty's portfolio and social media profiles" />
     <meta name="author" content="Goutham Shetty" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/https://mir-s3-cdn-cf.behance.net/user/230/d4baa6464831253.67fe48fa50e3a.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   </head>
 
